Add architectural compliance issue
- add required properties method to architectural reconstruction plugins